	refactored init script - one script should work on all platforms now
	updated init script installation - should work on virtually all unixes
	added OS X init configuration
	updated the sqlr-listener to clean up files related to ipc, sockets
		and marking whether the db is up or down on exit
	sqlr-start no longer starts the cache manager
	added a second init script for the cache manager

0.52 - sqlrsh has long reported the wrong version, fixed that
	added csv support to sqlr-export and a -format xml|csv option
	replaced snprintf calls with charstring::printf calls
	added a test for sys/vnode.h to work around an issue with perl on
		SCO OSR6
	added workarounds for old versions of sqlite without sqlite3_malloc
		and sqlite3_free with char * argument
	fixed error with sqlserver where "describe <table>" would return
		columns in alphabetical order rather than the order they
		are in the table
	the code freetds uses to get column names from MS SQL Server works
		for temp tables now
	added informix->mssqlserver translation for select into queries
	added translation to convert ||'s to concat() calls or +'s
	added a long-missing "delete clientsock" to sqlrlistener that could
		cause a crash after enough time
	various documentation tweaks
	added handling for "select into" queries to
		temptableslocalize/sybaseize translations
	fixed various crashes that could occur when a query filter was used
	updated the query routing and filtering doc
	sqlrsh supports multiple commands on a single line or on the
		command-line now
	exit/quit in a sqlrsh script aborts the script now
	improved date/time parsing for translations and result-set conversions
	fixed lots of cases where const char *'s were being deleted
	added 64-bit build support for windows
	combined sqlrclient files for faster compiling
	converted \t to actual tab in regular expressions for
		posix-compatibility

0.51 - fixed minor perl DBI driver documentation issue
	added support for oracle 12c