@@ -5,16 +5,90 @@ include ../../config.mk
 .PHONY: all clean install uninstall
 
 ifeq ($(SQLRELAY_ENABLE_SHARED),no)
-PLUGINLOBJS = $(shell ls ../triggers/*.lo) \
-		$(shell ls ../translations/*.lo) \
-		$(shell ls ../queries/*.lo) \
+PLUGINSRCS = sqlrconnectiondeclarations.cpp \
+		sqlrconnectionassignments.cpp \
+		sqlrloggerdeclarations.cpp \
+		sqlrloggerassignments.cpp \
+		sqlrpwdencdeclarations.cpp \
+		sqlrpwdencassignments.cpp \
+		sqlrquerydeclarations.cpp \
+		sqlrqueryassignments.cpp \
+		sqltranslationdeclarations.cpp \
+		sqltranslationassignments.cpp \
+		sqltriggerdeclarations.cpp \
+		sqltriggerassignments.cpp
+PLUGINLOBJS = $(shell ls ../connections/*/*.lo) \
 		$(shell ls ../loggers/*.lo) \
 		$(shell ls ../pwdencs/*.lo) \
-		$(shell ls ../connections/*.lo)
+		$(shell ls ../queries/*.lo) \
+		$(shell ls ../translations/*.lo) \
+		$(shell ls ../triggers/*.lo)
+PLUGINLIBS =
+ifneq ($(strip $(DB2LIBSPATH)),)
+ifeq ($(DB2USERPATH),yes)
+PLUGINLIBS += -R $(DB2LIBSPATH)
+endif
+endif
+PLUGINLIBS += $(DB2LIBS)
+ifneq ($(strip $(FIREBIRDLIBSPATH)),)
+ifeq ($(FIREBIRDUSERPATH),yes)
+PLUGINLIBS += -R $(FIREBIRDLIBSPATH)
+endif
+endif
+PLUGINLIBS += $(FIREBIRDLIBS)
+ifneq ($(strip $(FREETDSLIBSPATH)),)
+ifeq ($(FREETDSUSERPATH),yes)
+PLUGINLIBS += -R $(FREETDSLIBSPATH)
+endif
+endif
+PLUGINLIBS += $(FREETDSLIBS)
+ifneq ($(strip $(MDBTOOLSLIBSPATH)),)
+ifeq ($(MDBTOOLSUSERPATH),yes)
+PLUGINLIBS += -R $(MDBTOOLSLIBSPATH)
+endif
+endif
+PLUGINLIBS += $(MDBTOOLSLIBS)
+ifneq ($(strip $(MYSQLLIBSPATH)),)
+ifeq ($(MYSQLUSERPATH),yes)
+PLUGINLIBS += -R $(MYSQLLIBSPATH)
+endif
+endif
+PLUGINLIBS += $(MYSQLLIBS)
+ifneq ($(strip $(ODBCLIBSPATH)),)
+ifeq ($(ODBCUSERPATH),yes)
+PLUGINLIBS += -R $(ODBCLIBSPATH)
+endif
+endif
+PLUGINLIBS += $(ODBCLIBS)
+ifneq ($(strip $(ORACLELIBSPATH)),)
+ifeq ($(ORACLEUSERPATH),yes)
+PLUGINLIBS += -R $(ORACLELIBSPATH)
+endif
+endif
+PLUGINLIBS += $(ORACLELIBS)
+ifneq ($(strip $(POSTGRESQLLIBSPATH)),)
+ifeq ($(POSTGRESQLUSERPATH),yes)
+PLUGINLIBS += -R $(POSTGRESQLLIBSPATH)
+endif
+endif
+PLUGINLIBS += $(POSTGRESQLLIBS)
+ifneq ($(strip $(SQLITELIBSPATH)),)
+ifeq ($(SQLITEUSERPATH),yes)
+PLUGINLIBS += -R $(SQLITELIBSPATH)
+endif
+endif
+PLUGINLIBS += $(SQLITELIBS)
+ifneq ($(strip $(SYBASELIBSPATH)),)
+ifeq ($(SYBASEUSERPATH),yes)
+PLUGINLIBS += -R $(SYBASELIBSPATH)
+endif
+endif
+PLUGINLIBS += $(SYBASELIBS)
+PLUGINLIBS += -L$(top_builddir)/src/api/c++/src -lsqlrclient
 endif
 
 CPPFLAGS = $(WERROR) $(BASECPPFLAGS) $(CONFIGFILECPPFLAG) $(CACHEDIRCPPFLAG) $(PSDEFINE) -I./ -I$(top_builddir)/ -I$(top_builddir)/src/common -I$(top_builddir)/src/util $(RUDIMENTSINCLUDES) -DLIBEXECDIR=\"$(libexecdir)\"
-LIBS = -L$(top_builddir)/src/util -lsqlrutil $(RUDIMENTSLIBS) $(MATHLIB) $(EXTRALIBS) $(LIBDMALLOC) $(LIBEFENCE)
+LIBS = -L./ -lsqlrserver $(PLUGINLIBS) -L$(top_builddir)/src/util -lsqlrutil $(RUDIMENTSLIBS) $(MATHLIB) $(EXTRALIBS) $(LIBDMALLOC) $(LIBEFENCE)
 RPATH =
 ifneq ($(strip $(libdir)),)
 ifeq ($(SERVERUSERPATH),yes)
@@ -39,7 +113,7 @@ SRCS = sqlrlistener.cpp \
 	sqlrquery.cpp \
 	sqlrpwdencs.cpp \
 	sqlrpwdenc.cpp \
-	sqlrscaler.cpp
+	sqlrscaler.cpp \
 
 LOBJS = sqlrlistener.lo \
 	sqlrcontroller.lo \
@@ -61,12 +135,13 @@ LOBJS = sqlrlistener.lo \
 	sqlrscaler.lo \
 	$(PLUGINLOBJS)
 
-.SUFFIXES: .lo
+.SUFFIXES: .lo .cpp.in
 
 .cpp.lo:
 	$(LIBTOOL) --mode=compile $(CXX) $(CXXFLAGS) $(CPPFLAGS) -c $< -o $@
 
-all: libsqlrserver.la \
+all: $(PLUGINSRCS) \
+	libsqlrserver.la \
 	sqlr-start$(EXE) \
 	sqlr-listener$(EXE) \
 	sqlr-connection$(EXE) \
@@ -75,25 +150,122 @@ all: libsqlrserver.la \
 
 clean:
 	$(LIBTOOL) --mode=clean $(RM) *.la *.lo *.o sqlr-start$(EXE) sqlr-listener$(EXE) sqlr-connection$(EXE) sqlr-scaler$(EXE) sqlr-cachemanager$(EXE)
+	$(RM) $(PLUGINSRCS)
 	$(RMTREE) .libs
 
 libsqlrserver.la: $(SRCS) $(LOBJS)
-	$(LIBTOOL) --mode=link $(CXX) -o $@ $(LOBJS) $(LDFLAGS) -L$(top_builddir)/src/util -lsqlrutil $(RUDIMENTSLIBS) $(EXTRALIBS) -rpath $(libdir) -release $(SQLR_VERSION) -version-info $(SONAME_VERSION_INFO) -no-undefined
+	$(LIBTOOL) --mode=link $(CXX) -o $@ $(LOBJS) $(LDFLAGS) -L$(top_builddir)/src/util -lsqlrutil $(RUDIMENTSLIBS) $(PLUGINLIBS) $(EXTRALIBS) -rpath $(libdir) -release $(SQLR_VERSION) -version-info $(SONAME_VERSION_INFO) -no-undefined
 
 sqlr-start$(EXE): sqlr-start.cpp sqlr-start.lo
-	$(LIBTOOL) --mode=link $(CXX) $(LDFLAGS) -o $@ sqlr-start.lo -L./ -lsqlrserver $(LIBS) $(RPATH)
+	$(LIBTOOL) --mode=link $(CXX) $(LDFLAGS) -o $@ sqlr-start.lo $(LIBS) $(RPATH)
 
 sqlr-listener$(EXE): sqlr-listener.cpp sqlr-listener.lo
-	$(LIBTOOL) --mode=link $(CXX) $(LDFLAGS) -o $@ sqlr-listener.lo -L./ -lsqlrserver $(LIBS) $(RPATH)
+	$(LIBTOOL) --mode=link $(CXX) $(LDFLAGS) -o $@ sqlr-listener.lo $(LIBS) $(RPATH)
 
 sqlr-connection$(EXE): sqlr-connection.cpp sqlr-connection.lo
-	$(LIBTOOL) --mode=link $(CXX) $(LDFLAGS) -o $@ sqlr-connection.lo -L./ -lsqlrserver $(LIBS) $(RPATH)
+	$(LIBTOOL) --mode=link $(CXX) $(LDFLAGS) -o $@ sqlr-connection.lo $(LIBS) $(RPATH)
 
 sqlr-scaler$(EXE): sqlr-scaler.cpp sqlr-scaler.lo
-	$(LIBTOOL) --mode=link $(CXX) $(LDFLAGS) -o $@ sqlr-scaler.lo -L./ -lsqlrserver $(LIBS) $(RPATH)
+	$(LIBTOOL) --mode=link $(CXX) $(LDFLAGS) -o $@ sqlr-scaler.lo $(LIBS) $(RPATH)
 
 sqlr-cachemanager$(EXE): sqlr-cachemanager.cpp sqlr-cachemanager.lo
-	$(LIBTOOL) --mode=link $(CXX) $(LDFLAGS) -o $@ sqlr-cachemanager.lo -L./ -lsqlrserver $(LIBS) $(RPATH)
+	$(LIBTOOL) --mode=link $(CXX) $(LDFLAGS) -o $@ sqlr-cachemanager.lo $(LIBS) $(RPATH)
+
+sqlrconnectiondeclarations.cpp: sqlrconnectiondeclarations.cpp.in
+	$(RM) $@
+	for file in `ls ../connections/*/*connection.cpp`; \
+	do \
+		module=`basename $$file .cpp`; \
+		sed -e "s|@module@|$$module|g" $< >> $@; \
+	done
+
+sqlrconnectionassignments.cpp: sqlrconnectionassignments.cpp.in
+	$(RM) $@
+	for file in `ls ../connections/*/*connection.cpp`; \
+	do \
+		module=`basename $$file .cpp`; \
+		sed -e "s|@module@|$$module|g" $< >> $@; \
+	done
+
+sqlrloggerdeclarations.cpp: sqlrloggerdeclarations.cpp.in
+	$(RM) $@
+	for file in `ls ../loggers/*.cpp`; \
+	do \
+		module=`basename $$file .cpp`; \
+		sed -e "s|@module@|$$module|g" $< >> $@; \
+	done
+
+sqlrloggerassignments.cpp: sqlrloggerassignments.cpp.in
+	$(RM) $@
+	for file in `ls ../loggers/*.cpp`; \
+	do \
+		module=`basename $$file .cpp`; \
+		sed -e "s|@module@|$$module|g" $< >> $@; \
+	done
+
+sqlrpwdencdeclarations.cpp: sqlrpwdencdeclarations.cpp.in
+	$(RM) $@
+	for file in `ls ../pwdencs/*.cpp`; \
+	do \
+		module=`basename $$file .cpp`; \
+		sed -e "s|@module@|$$module|g" $< >> $@; \
+	done
+
+sqlrpwdencassignments.cpp: sqlrpwdencassignments.cpp.in
+	$(RM) $@
+	for file in `ls ../pwdencs/*.cpp`; \
+	do \
+		module=`basename $$file .cpp`; \
+		sed -e "s|@module@|$$module|g" $< >> $@; \
+	done
+
+sqlrquerydeclarations.cpp: sqlrquerydeclarations.cpp.in
+	$(RM) $@
+	for file in `ls ../queries/*.cpp`; \
+	do \
+		module=`basename $$file .cpp`; \
+		sed -e "s|@module@|$$module|g" $< >> $@; \
+	done
+
+sqlrqueryassignments.cpp: sqlrqueryassignments.cpp.in
+	$(RM) $@
+	for file in `ls ../queries/*.cpp`; \
+	do \
+		module=`basename $$file .cpp`; \
+		sed -e "s|@module@|$$module|g" $< >> $@; \
+	done
+
+sqltranslationdeclarations.cpp: sqltranslationdeclarations.cpp.in
+	$(RM) $@
+	for file in `ls ../translations/*.cpp`; \
+	do \
+		module=`basename $$file .cpp`; \
+		sed -e "s|@module@|$$module|g" $< >> $@; \
+	done
+
+sqltranslationassignments.cpp: sqltranslationassignments.cpp.in
+	$(RM) $@
+	for file in `ls ../translations/*.cpp`; \
+	do \
+		module=`basename $$file .cpp`; \
+		sed -e "s|@module@|$$module|g" $< >> $@; \
+	done
+
+sqltriggerdeclarations.cpp: sqltriggerdeclarations.cpp.in
+	$(RM) $@
+	for file in `ls ../triggers/*.cpp`; \
+	do \
+		module=`basename $$file .cpp`; \
+		sed -e "s|@module@|$$module|g" $< >> $@; \
+	done
+
+sqltriggerassignments.cpp: sqltriggerassignments.cpp.in
+	$(RM) $@
+	for file in `ls ../triggers/*.cpp`; \
+	do \
+		module=`basename $$file .cpp`; \
+		sed -e "s|@module@|$$module|g" $< >> $@; \
+	done
 
 install:
 	$(MKINSTALLDIRS) $(libdir)
